--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "laravel/framework": "^9.0"
+        "php": "^8.1",
+        "laravel/framework": "^9.0|^10.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
-        "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^7.3"
+        "phpunit/phpunit": "^10.0",
+        "orchestra/testbench": "^8.0",
+        "laravel/pint": "^1.8"
     },
     "autoload": {
         "psr-4": {
