--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^9.0|^10.0"
+        "laravel/framework": "^11.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.5",
         "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0",
+        "orchestra/testbench": "^9.0",
         "laravel/pint": "^1.8"
     },
     "autoload": {
@@ -39,6 +39,7 @@
     "scripts": {
         "post-autoload-dump": [
             "@php ./vendor/bin/testbench package:discover --ansi"
-        ]
+        ],
+        "test": "phpunit"
     }
 }
